; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/cell/extr_cbe_regs.c_cbe_get_pmd_shadow_regs.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/cell/extr_cbe_regs.c_cbe_get_pmd_shadow_regs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cbe_pmd_shadow_regs = type { i32 }
%struct.device_node = type { i32 }
%struct.cbe_regs_map = type { %struct.cbe_pmd_shadow_regs }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.cbe_pmd_shadow_regs* @cbe_get_pmd_shadow_regs(%struct.device_node* %0) #0 {
  %2 = alloca %struct.cbe_pmd_shadow_regs*, align 8
  %3 = alloca %struct.device_node*, align 8
  %4 = alloca %struct.cbe_regs_map*, align 8
  store %struct.device_node* %0, %struct.device_node** %3, align 8
  %5 = load %struct.device_node*, %struct.device_node** %3, align 8
  %6 = call %struct.cbe_regs_map* @cbe_find_map(%struct.device_node* %5)
  store %struct.cbe_regs_map* %6, %struct.cbe_regs_map** %4, align 8
  %7 = load %struct.cbe_regs_map*, %struct.cbe_regs_map** %4, align 8
  %8 = icmp eq %struct.cbe_regs_map* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store %struct.cbe_pmd_shadow_regs* null, %struct.cbe_pmd_shadow_regs** %2, align 8
  br label %13

10:                                               ; preds = %1
  %11 = load %struct.cbe_regs_map*, %struct.cbe_regs_map** %4, align 8
  %12 = getelementptr inbounds %struct.cbe_regs_map, %struct.cbe_regs_map* %11, i32 0, i32 0
  store %struct.cbe_pmd_shadow_regs* %12, %struct.cbe_pmd_shadow_regs** %2, align 8
  br label %13

13:                                               ; preds = %10, %9
  %14 = load %struct.cbe_pmd_shadow_regs*, %struct.cbe_pmd_shadow_regs** %2, align 8
  ret %struct.cbe_pmd_shadow_regs* %14
}

declare dso_local %struct.cbe_regs_map* @cbe_find_map(%struct.device_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
